# senju-term

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
apps/desktop-app/: Cargo.toml  README.md
apps/desktop-app/crates/senju-core/: Cargo.toml
apps/desktop-app/crates/senju-core/src/: lib.rs  models.rs  store.rs
apps/desktop-app/crates/senju-core/src/sessions/: local.rs  mod.rs  shell_integration.rs  ssh.rs
apps/desktop-app/scripts/: lp_shots.mjs  ui_shot.mjs
apps/desktop-app/src-tauri/: tauri.conf.json
apps/desktop-app/src-tauri/src/: lib.rs
apps/desktop-app/ui/: app.js  index.html  styles.css
apps/web-lp/: README.md  index.html  styles.css
crates/senju-core/: Cargo.toml
crates/senju-core/src/: lib.rs  models.rs  store.rs  template.rs
crates/senju-core/src/sessions/: local.rs  mod.rs  ssh.rs
crates/senju-core/tests/: ssh_integration.rs
desktop-app/crates/senju-core/src/: models.rs
desktop-app/crates/senju-core/src/sessions/: local.rs
desktop-app/crates/senju-core/tests/: ssh_integration.rs
docs/: README.md  deploy-cloudflare-pages.md  review-checklist.md
scripts/: gen_icons.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: app.js  index.html  styles.css
web-lp/: README.md
